<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="160dp">

        <ImageView
            android:id="@+id/image55"
            android:layout_width="135dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="132dp"
            android:src="@drawable/unknown_avatar" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="221dp"
            android:background="@drawable/buttonshape"
            android:onClick="uploadEmprego"
            android:text="@string/upload_oferta"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="36dp" />

        <Button
            android:id="@+id/button55"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/buttonshape2"
            android:onClick="changeToTrabalhador"
            android:text="Trabalhador"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/button4"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/button55"
            android:layout_marginEnd="20dp"
            android:background="@drawable/buttonshape3"
            android:onClick="goChat"
            android:text="@string/chat"
            android:textAppearance="@style/TextAppearance.AppCompat" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="143dp"
            android:background="@drawable/buttonshape"
            android:onClick="changeMeusEmpregos"
            android:text="@string/change_oferta"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>